# josiet-j.github.io

./: .gitignore  2015.md  2016.md  2017.md  CNAME  README.md  README.org  index.html  josietj.cabal  package-lock.json  package.json  porfolio.md  previously.md  readMeFirst.md  shell.nix  site.hs
.direnv/ruby/extensions/x86_64-linux/2.6.0/commonmarker-0.17.13/: gem_make.out
.direnv/ruby/extensions/x86_64-linux/2.6.0/eventmachine-1.2.7/: gem_make.out
.direnv/ruby/extensions/x86_64-linux/2.6.0/ffi-1.12.2/: gem_make.out
.direnv/ruby/extensions/x86_64-linux/2.6.0/http_parser.rb-0.6.0/: gem_make.out
.direnv/ruby/extensions/x86_64-linux/2.6.0/nokogiri-1.10.9/: gem_make.out
.direnv/ruby/gems/commonmarker-0.17.13/ext/commonmarker/: Makefile
.direnv/ruby/gems/eventmachine-1.2.7/ext/: Makefile
.direnv/ruby/gems/eventmachine-1.2.7/ext/fastfilereader/: Makefile
.direnv/ruby/gems/ffi-1.12.2/ext/ffi_c/: Makefile
.direnv/ruby/gems/ffi-1.12.2/ext/ffi_c/libffi-x86_64-linux/: Makefile  a.out  config.status  libffi.la  libffi.map  libtool
.direnv/ruby/gems/ffi-1.12.2/ext/ffi_c/libffi-x86_64-linux/.libs/: libffi.lai  (+1 more)
.direnv/ruby/gems/nokogiri-1.10.9/ext/nokogiri/: Makefile
.sass-cache/2a95a050c230d0f1f252bdb49422683d7a195fb8/: _base.scssc  _layout.scssc  _syntax-highlighting.scssc
.sass-cache/679b0a13fa5dc2c9674b459eeceb0deed2e1ce2b/: minima.scssc
_posts/: 2020-04-07-welcome-to-jekyll.markdown
css/: extraFonts.css  skeleton.css
js/: link.js  smoothScroll.js
templates/: bio.html  default.html  head.html  porfolio.html  prevWork.html  work.html
(+3 files in other folders)
